@@ -1,3 +1,7 @@
+2012-02-21  Ugo Pattacini  <ugo.pattacini@iit.it>
+        * src/libYARP_dev/include/yarp/dev/GazeControl.h:
+        added the method lookAtMonoPixelWithVergence()
+
 2012-02-17  Andrea Del Prete  <andrea.delprete@iit.it>
     * src/libYARP_sig/src/Vector.cpp
     Modify Vector::operator=() so that it does not reallocate
@@ -5,7 +9,6 @@
     vector.
 
 2012-02-17  Ugo Pattacini  <ugo.pattacini@iit.it>
-
         * src/libYARP_dev/include/yarp/dev/GazeControl.h:
         added two new functionalities implemented by get3DPointFromAngles()
         and getAnglesFrom3DPoint() methods.
